model extensions, competition api
