# restapi/operations/competition/update_competiton_responses.go
@@ -1,0 +1,60 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package competition
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// UpdateCompetitonBadRequestCode is the HTTP code returned for type UpdateCompetitonBadRequest
+const UpdateCompetitonBadRequestCode int = 400
+
+/*UpdateCompetitonBadRequest Invalid competition supplied
+
+swagger:response updateCompetitonBadRequest
+*/
+type UpdateCompetitonBadRequest struct {
+}
+
+// NewUpdateCompetitonBadRequest creates UpdateCompetitonBadRequest with default headers values
+func NewUpdateCompetitonBadRequest() *UpdateCompetitonBadRequest {
+
+	return &UpdateCompetitonBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *UpdateCompetitonBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// UpdateCompetitonNotFoundCode is the HTTP code returned for type UpdateCompetitonNotFound
+const UpdateCompetitonNotFoundCode int = 404
+
+/*UpdateCompetitonNotFound Competition not found
+
+swagger:response updateCompetitonNotFound
+*/
+type UpdateCompetitonNotFound struct {
+}
+
+// NewUpdateCompetitonNotFound creates UpdateCompetitonNotFound with default headers values
+func NewUpdateCompetitonNotFound() *UpdateCompetitonNotFound {
+
+	return &UpdateCompetitonNotFound{}
+}
+
+// WriteResponse to the client
+func (o *UpdateCompetitonNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
