# swagger/los-server.yml
@@ -39,6 +39,7 @@ tags:
 - name: "user"
   description: "Operations about user"
 schemes:
+- "http"
 - "https"
 paths:
   /ranges:
@@ -57,6 +58,7 @@ paths:
         required: false
         default: true
         type: "boolean"
+      security: []
       responses:
         200:
           description: "successful operation"
@@ -110,6 +112,7 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      security: []
       responses:
         200:
           description: "successful operation"
@@ -137,6 +140,7 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      security: []
       responses:
         200:
           description: "successful operation"
@@ -190,6 +194,7 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      security: []
       responses:
         200:
           description: "successful operation"
@@ -201,6 +206,77 @@ paths:
           description: "Shooting range not competition"
           schema:
             $ref: "#/definitions/ApiResponse"
+    put:
+      tags:
+      - "competition"
+      summary: "Updated competition"
+      description: "This can only be done by admin."
+      operationId: "updateCompetiton"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "competitionId"
+        in: "path"
+        description: "ID of competition to update"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "body"
+        in: "body"
+        description: "Updated competition object"
+        required: true
+        schema:
+          $ref: "#/definitions/Competition"
+      responses:
+        400:
+          description: "Invalid competition supplied"
+        404:
+          description: "Competition not found"
+    delete:
+      tags:
+      - "competition"
+      summary: "Delete competition"
+      description: "This can only be done by admin."
+      operationId: "deleteCompetition"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "competitionId"
+        in: "path"
+        description: "ID of competition to delete"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        400:
+          description: "Invalid competition supplied"
+        404:
+          description: "Competition not found"
+  /ranges/{rangeId}/competition:
+    post:
+      tags:
+      - "competition"
+      summary: "Create new competiton"
+      description: "This can only be done by admin. Only id needs to be probided for subobjects (type, category)."
+      operationId: "createCompetition"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "rangeId"
+        in: "path"
+        description: "ID of the range the competition is created for"
+        required: true
+        type: "integer"
+        format: "int64"
+      - in: "body"
+        name: "body"
+        description: "Created competition object"
+        required: true
+        schema:
+          $ref: "#/definitions/Competition"
+      responses:
+        default:
+          description: "successful operation"
   /user:
     post:
       tags:
@@ -426,8 +502,6 @@ definitions:
         description: "shooting range active"
   Competition:
     type: "object"
-    required:
-    - "name"
     properties:
       id:
         type: "integer"
@@ -439,15 +513,36 @@ definitions:
         type: "string"
         format: "date"
         description: "date of the competition"
-      situations:
-        type: "array"
-        items:
-          $ref: "#/definitions/Situation"
-        description: "list of situations"
+      category:
+        $ref: "#/definitions/CompetitionCategory"
+      type:
+        $ref: "#/definitions/CompetitionType"
+  CompetitionCategory:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      code:
+        type: "string"
+        example: "KZ"
+      name:
+        type: "string"
+        example: "Kratka zbran"
+  CompetitionType:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      code:
+        type: "string"
+        example: "P"
+      name:
+        type: "string"
+        example: "Poharova"
   Situation:
     type: "object"
-    required:
-    - "name"
     properties:
       id:
         type: "integer"
@@ -465,8 +560,6 @@ definitions:
         description: "list of situations"
   Target:
     type: "object"
-    required:
-    - "name"
     properties:
       id:
         type: "integer"
@@ -477,8 +570,6 @@ definitions:
         $ref: "#/definitions/TargetType"
   TargetType:
     type: "object"
-    required:
-    - "name"
     properties:
       id:
         type: "integer"
